--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel = "stylesheet" href = "styles.css">
 </head>
 <body>
-    
+    <header style="background-color: #D3E0EA;">Hello there</header>
 </body>
 </html>
