--- a/index.html
+++ b/index.html
@@ -1,19 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jeremiah Ramiscal's Portfolio</title>
-    <link rel = "stylesheet" href = "styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Chivo+Mono:ital,wght@0,500;0,600;0,800;1,600&display=swap"
       rel="stylesheet"
     />
-</head>
-<body>
-    <header style="background-color: #D3E0EA;">Hello there</header>
-</body>
+  </head>
+  <body>
+    <nav>
+      <p>Jeremiah Ramiscal</p>
+      <div class="buttons">
+        <button>button here</button>
+        <button>button here</button>
+        <button>button here</button>
+      </div>
+    </nav>
+    <header>
+      <div class="description">
+        <div class="title">Welcome to my portfolio page!</div>
+        <div class="caption">
+          <div class="line">
+            I would like to showcase my web-development skill thus
+          </div>
+          <div class="line">
+            far through self-learning. This page isn't too crazy nice
+          </div>
+          <div class="line">
+            and elegant, but I hope with time I will be able to improve
+          </div>
+          <div class="line">this page.</div>
+          <div class="line"><button>button here</button></div>
+        </div>
+      </div>
+      <div>Another image here</div>
+    </header>
+    <div class = "about"></div>
+    <div class = "projects"></div>
+    <div class = "contact"></div>
+    <footer>footer here</footer>
+  </body>
 </html>
