Added empty divs for about, projects, contact

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       </div>
       <div>Another image here</div>
     </header>
-    <div class = "about"></div>
-    <div class = "projects"></div>
-    <div class = "contact"></div>
+    <div class = "about">about</div>
+    <div class = "projects">projects</div>
+    <div class = "contact">contact info</div>
     <footer>footer here</footer>
   </body>
 </html>
