added styling to buttons

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   </head>
   <body>
     <nav>
-      <p>Jeremiah Ramiscal</p>
+      <p id = "name">Jeremiah Ramiscal</p>
       <div class="buttons">
-        <button>button here</button>
-        <button>button here</button>
-        <button>button here</button>
+        <button class = "nav-buttons">About</button>
+        <button class = "nav-buttons">Contact</button>
+        <button class = "nav-buttons">Projects</button>
       </div>
     </nav>
     <header>
@@ -36,7 +36,7 @@
             and elegant, but I hope with time I will be able to improve
           </div>
           <div class="line">this page.</div>
-          <div class="line"><button>button here</button></div>
+          <div class="line"><button id ="source-code-btn">button here</button></div>
         </div>
       </div>
       <div>Another image here</div>
