--- a/index.html
+++ b/index.html
@@ -15,35 +15,48 @@
   </head>
   <body>
     <nav>
-      <p id = "name">Jeremiah Ramiscal</p>
+      <p id="name">Jeremiah Ramiscal</p>
       <div class="buttons">
-        <button class = "nav-buttons">About</button>
-        <button class = "nav-buttons">Contact</button>
-        <button class = "nav-buttons">Projects</button>
+        <button class="nav-buttons">About</button>
+        <button class="nav-buttons">Contact</button>
+        <button class="nav-buttons">Projects</button>
       </div>
     </nav>
     <header>
       <div class="description">
         <div class="title">Welcome to my portfolio page!</div>
         <div class="caption">
-          <div class="line">
-            I would like to showcase my web-development skill thus
-          </div>
-          <div class="line">
-            far through self-learning. This page isn't too crazy nice
-          </div>
-          <div class="line">
-            and elegant, but I hope with time I will be able to improve
-          </div>
-          <div class="line">this page.</div>
-          <div class="line"><button id ="source-code-btn">button here</button></div>
+          <p>I would like to showcase my web-development skill thus</p>
+          <p>far through self-learning. This page isn't too crazy nice</p>
+          <p>and elegant, but I hope with time I will be able to improve</p>
+          <p>this page.</p>
+          <p><button id="source-code-btn">button here</button></p>
         </div>
       </div>
       <div>Another image here</div>
     </header>
-    <div class = "about">about</div>
-    <div class = "projects">projects</div>
-    <div class = "contact">contact info</div>
+    <div class="about section reveal">
+      <div class="title">About</div>
+      <h2>Hello world. It's nice to meet you.</h3>
+      <p>
+        I am university student trying to break into tech.
+        <br />
+        Along side my course work, I am self-teaching myself
+        <br />
+        fullstack-development through projects
+        <br />
+        and online curriculums such as
+        <a href="https://www.theodinproject.com/"> The Odin Project. </a>
+        <br>
+        I am a naturally curious individual, <br>
+        hungry for knowledge, and likes
+        <br>
+        to tinker with technology.
+      </p>
+    </div>
+    <div class="projects">projects</div>
+    <div class="contact">contact info</div>
     <footer>footer here</footer>
+    <script src="scripts.js"></script>
   </body>
 </html>
