Added fixed sticky footer,add scroll animation

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
           <p>far through self-learning. This page isn't too crazy nice</p>
           <p>and elegant, but I hope with time I will be able to improve</p>
           <p>this page.</p>
-          <p><button id="source-code-btn">button here</button></p>
         </div>
       </div>
       <div>Another image here</div>
@@ -51,7 +50,7 @@
         I am a naturally curious individual, <br>
         hungry for knowledge, and likes
         <br>
-        to tinker with technology.
+        to problem-solve.
       </p>
     </div>
     <div class="projects">projects</div>
