Added projects tab

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>
     <div class="about section reveal">
       <div class="title">About</div>
-      <h2>Hello world. It's nice to meet you.</h3>
+      <h2>Hello world. It's nice to meet you.</h2>
       <p>
         I am university student trying to break into tech.
         <br />
@@ -53,9 +53,18 @@
         to problem-solve.
       </p>
     </div>
-    <div class="projects">projects</div>
-    <div class="contact">contact info</div>
-    <footer>footer here</footer>
+    <div class="projects section reveal">
+      <div class = "title">Projects</div>
+      <h2>Here are some of the projects
+        <br>
+        I've worked on.
+      </h2>
+      <div id = "projects-grid">
+        <div id = "weather-app" class = "project-item">Weather App</div>
+        <div id = "gratitude-journal" class = "project-item">Gratitude Journal</div>
+        <div id = "color-canvas" class = "project-item">Color Canvas</div>
+      </div>
+    </div>
     <script src="scripts.js"></script>
   </body>
 </html>
