Changed height of cards

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button class="nav-buttons">Contact</button>
       </div>
     </nav>
-    <header>
+    <header class = "reveal">
       <div class="description">
         <div class="title">Welcome to my portfolio page!</div>
         <div class="caption">
