made sections responsive, added links/hover to projects

--- a/index.html
+++ b/index.html
@@ -14,14 +14,7 @@
     />
   </head>
   <body>
-    <nav>
-      <p id="name">Jeremiah Ramiscal</p>
-      <div class="buttons">
-        <button class="nav-buttons">About</button>
-        <button class="nav-buttons">Projects</button>
-        <button class="nav-buttons">Contact</button>
-      </div>
-    </nav>
+    
     <header class = "reveal">
       <div class="description">
         <div class="title">Welcome to my portfolio page!</div>
@@ -60,11 +53,44 @@
         I've worked on.
       </h2>
       <div id = "projects-grid">
-        <div id = "weather-app" class = "project-item">Weather App</div>
-        <div id = "gratitude-journal" class = "project-item">Gratitude Journal</div>
-        <div id = "color-canvas" class = "project-item">Color Canvas</div>
+        <div id = "weather-app" class = "project-item">
+          <a href = "https://heyitsjearbear.github.io/weather-app/">Weather App</a>
+        </div>
+        <div id = "gratitude-journal" class = "project-item">
+          <a href = "https://heyitsjearbear.github.io/gratitude-journal/">Gratitude Journal</a>
+        </div>
+        <div id = "color-canvas" class = "project-item">
+          <a href = "https://heyitsjearbear.github.io/color-canvas/">Color Canvas</a>
+        </div>
       </div>
     </div>
+    <div class = "contact section reveal">
+      <div class = "title">Contact</div>
+      <h2>Hello world. It's nice to meet you.</h2>
+      <p>
+        I am university student trying to break into tech.
+        <br />
+        Along side my course work, I am self-teaching myself
+        <br />
+        fullstack-development through projects
+        <br />
+        and online curriculums such as
+        <a href="https://www.theodinproject.com/"> The Odin Project. </a>
+        <br>
+        I am a naturally curious individual, <br>
+        hungry for knowledge, and likes
+        <br>
+        to problem-solve.
+      </p>
+    </div>
+    <nav>
+      <p id="name">Jeremiah Ramiscal</p>
+      <div class="buttons">
+        <button class="nav-buttons">About</button>
+        <button class="nav-buttons">Projects</button>
+        <button class="nav-buttons">Contact</button>
+      </div>
+    </nav>
     <script src="scripts.js"></script>
   </body>
 </html>
