changed message form dimensions

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <label>Your Email: <br><input type="email" name="email" /></label>
           </p>
           <p>
-            <label>Message: <br><textarea cols = "62" rows = "12" name="message"></textarea></label>
+            <label>Message: <br><textarea rows = "12" name="message"></textarea></label>
           </p>
           <p>
             <button type="submit">Send</button>
