--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
           </p>
         </div>
       </div>
-      <div>Another image here</div>
+      <img src="imgs/jeremiah-ramiscal.jpeg" 
+        style="width: auto; height: 200px;"/>
     </header>
     <div class="about section reveal">
       <div class="title">About</div>
@@ -94,9 +95,9 @@
     <nav>
       <p id="name">Jeremiah Ramiscal</p>
       <div class="buttons">
-        <button class="nav-buttons">About</button>
-        <button class="nav-buttons">Projects</button>
-        <button class="nav-buttons">Contact</button>
+        <button type = "button" class="nav-buttons">About</button>
+        <button type = "button" class="nav-buttons">Projects</button>
+        <button type = "button" class="nav-buttons">Contact</button>
       </div>
     </nav>
     <script src="scripts.js"></script>
