Added nav bar btn functionality

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
     <nav>
       <p id="name">Jeremiah Ramiscal</p>
       <div class="buttons">
-        <button type = "button" class="nav-buttons">About</button>
-        <button type = "button" class="nav-buttons">Projects</button>
-        <button type = "button" class="nav-buttons">Contact</button>
+        <button id = "about-button" type = "button" class="nav-buttons">About</button>
+        <button id = "projects-button" type = "button" class="nav-buttons">Projects</button>
+        <button id = "contact-button" type = "button" class="nav-buttons">Contact</button>
       </div>
     </nav>
     <script src="scripts.js"></script>
