Fixed transition for header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     
-    <header class = "reveal">
+    <header>
       <div class="description">
         <div class="title">Welcome to my portfolio page!</div>
         <div class="caption">
