started writing biography on blog page

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
       <div class="buttons">
         <button id = "about-button" type = "button" class="nav-buttons">About</button>
         <button id = "projects-button" type = "button" class="nav-buttons">Projects</button>
+        <button id = "blog-button" type = "button" class = "nav-buttons">Blog</button>
         <button id = "contact-button" type = "button" class="nav-buttons">Contact</button>
       </div>
     </nav>
