--- a/blog.html
+++ b/blog.html
@@ -15,14 +15,33 @@
     />
   </head>
   <body>
-    <header>
-      <div class="my-story">
-        <div class="title">My Story</div>
-        <p>
-          Aspiring software engineer, aspiring data scientist, aspiring web
-          developer... blah blah blah. This is
-        </p>
-      </div>
-    </header>
+    <div class="my-story">
+      <div class="title">My Story</div>
+      <p>
+        Aspiring software engineer, aspiring data scientist, aspiring web
+        developer... blah blah blah. To be honest it's all cookie cutter.
+        <b>I'll go further than that.</b>
+      </p>
+      <h2>Growing Up</h2>
+      <p>
+        Growing up, in an Asian-American household, I went through motions,
+        satisying the expectations that my parents set for me. I of course
+        didn't want to dissapoint them, as they had sacrificed so much for my
+        siblings and I to live a comfortable life. In high school, I immersed
+        myself in my studies and extra-curriculars to give myself that edge when
+        it came to college applications. That was fine and all, but in the blink
+        of an eye, everything moved fast. It was almost like, I was trying to
+        grow up fast.
+      </p>
+      <h2>In the present</h2>
+      <p>
+        It would be very unproductive of me to succumb to a "victim's
+        mentality". As of writing this I am pursing my bachelors in Computer
+        Science. So far in my college career, it seems like I have pushed
+        important people in my life away, for the reason of wanting to be
+        successful.
+      </p>
+    </div>
+    <script src="scripts.js"></script>
   </body>
 </html>
