--- a/blog.html
+++ b/blog.html
@@ -24,23 +24,42 @@
       </p>
       <h2>Growing Up</h2>
       <p>
-        Growing up, in an Asian-American household, I went through motions,
+        Growing up in an Asian-American household, I went through the motions,
         satisying the expectations that my parents set for me. I of course
         didn't want to dissapoint them, as they had sacrificed so much for my
         siblings and I to live a comfortable life. In high school, I immersed
         myself in my studies and extra-curriculars to give myself that edge when
         it came to college applications. That was fine and all, but in the blink
-        of an eye, everything moved fast. It was almost like, I was trying to
-        grow up fast.
+        of an eye, everything moved so fast. It was almost like I was trying to
+        grow up too fast.
       </p>
       <h2>In the present</h2>
       <p>
-        It would be very unproductive of me to succumb to a "victim's
-        mentality". As of writing this I am pursing my bachelors in Computer
-        Science. So far in my college career, it seems like I have pushed
-        important people in my life away, for the reason of wanting to be
-        successful.
+        To preface what I am about to say, I do not condone succumbing to a
+        "victim's mentality", though we all "feel" our emotions differently. As
+        of writing this I am pursing my bachelors in Computer Science. So far in
+        my college career, it seems like I have pushed important people in my
+        life away, for the reason of wanting to be successful. To the half of
+        you reading, you're probably thinking, "What's so wrong with that? You
+        just want to be successful." It's true, I do want to be successful. So
+        far though in my college career I've picked school and work over
+        maintaining relationships with the friends and people I love.
       </p>
+      <h2>For the Future</h2>
+      <p>
+        I hope to learn how to balance work and school with relationships. Human
+        interaction in my opinion is something essential to living the fullest life.
+        I am not perfect, I'll give myself that. But, there are things to work
+        on. As of writing this, I must learn how to make experiences for myself,
+        without having to depend on anyone to make them with/for me. I am a
+        work-in progress. Life is so much more than working toward the
+        inevitable 9-5 I desire.
+      </p>
+      <h2>
+        "The good life is a process, not a state of being. It is a direction not
+        a destination."
+      </h2>
+      <p>- Carl Rogers</p>
     </div>
     <script src="scripts.js"></script>
   </body>
