added back button to blog page

--- a/blog.html
+++ b/blog.html
@@ -35,25 +35,16 @@
       </p>
       <h2>In the present</h2>
       <p>
-        To preface what I am about to say, I do not condone succumbing to a
-        "victim's mentality", though we all "feel" our emotions differently. As
-        of writing this I am pursing my bachelors in Computer Science. So far in
-        my college career, it seems like I have pushed important people in my
-        life away, for the reason of wanting to be successful. To the half of
-        you reading, you're probably thinking, "What's so wrong with that? You
-        just want to be successful." It's true, I do want to be successful. So
-        far though in my college career I've picked school and work over
-        maintaining relationships with the friends and people I love.
+        I am pursuing my Computer Science degree, all the while balancing work
+        and staying healthy by consitently going to the gym. I firmly believe that there is always
+        something to be working on, though loving yourself and loving the journey
+        in which you are partaking on is important as well.
       </p>
       <h2>For the Future</h2>
       <p>
-        I hope to learn how to balance work and school with relationships. Human
-        interaction in my opinion is something essential to living the fullest life.
-        I am not perfect, I'll give myself that. But, there are things to work
-        on. As of writing this, I must learn how to make experiences for myself,
-        without having to depend on anyone to make them with/for me. I am a
-        work-in progress. Life is so much more than working toward the
-        inevitable 9-5 I desire.
+        Life is so much more than the inevitable 9-5 I am trying to pursue. 
+        I want to make experiences for myself, and romanticize my life the best I can, because
+        I only live once!!! I want to take control of my life, and make it the best.
       </p>
       <h2>
         "The good life is a process, not a state of being. It is a direction not
@@ -61,6 +52,12 @@
       </h2>
       <p>- Carl Rogers</p>
     </div>
-    <script src="scripts.js"></script>
+    <nav>
+      <p id="name">Jeremiah Ramiscal</p>
+      <div class="buttons">
+        <button id = "home-button" type = "button" class="nav-buttons">Home</button>
+      </div>
+    </nav>
+    <script src="blog.js"></script>
   </body>
 </html>
